--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-  "cSpell.words": ["Nuxt", "Vuetify"]
+  "cSpell.words": [
+    "dbaeumer",
+    "esbenp",
+    "formulahendry",
+    "Nuxt",
+    "pnpm",
+    "stylelint",
+    "Vuetify"
+  ]
 }
