--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -8,6 +8,7 @@
     "deque-systems.vscode-axe-linter",
     "dbaeumer.vscode-eslint",
     "wix.vscode-import-cost",
-    "streetsidesoftware.code-spell-checker"
+    "streetsidesoftware.code-spell-checker",
+    "pkief.material-icon-theme"
   ]
 }
